# foosball

./: .gitignore  README.md  compute.py  pyproject.toml
